# imgpack

./: .gitignore  README.md  pyproject.toml
imgpack/: .gitignore  __init__.py  app_logging.py  app_settings.py  config.py  image_pack.py  settings.yaml  steganography.py
imgpack/static/: style.css
imgpack/templates/: base.html  index.html
imgpack/templates/app/: index.html
imgpack/templates/images/: index.html
